--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Custom nav
 nav:
-  title: "Clover Tuan"
+  title: "潇潇雨的博客"
 
 favicon: ""
 
@@ -11,15 +11,15 @@ background:
 
 # Social media
 social:
-  Dribbble: https://dribbble.com/clovertuan
-  Behance: https://www.behance.net/clovertuan
-  Lofter: http://clovertuan.lofter.com/
-  Instagram: https://www.instagram.com/clovertuan/
-  GitHub: https://github.com/cloverTuan
+#  Dribbble: https://dribbble.com/clovertuan
+#  Behance: https://www.behance.net/clovertuan
+#  Lofter: http://clovertuan.lofter.com/
+#  Instagram: https://www.instagram.com/clovertuan/
+  GitHub: https://github.com/coolxxy
 
 # Custom footer
-mail: d.guangying@foxmail.com
-copyright: All rights reserved @Clover Tuan
+# mail: d.guangying@foxmail.com
+copyright: Powered by Hexo
 
 # Custom menu. You can specific the path or the card style (only useful for category page).
 # Two kinds of card style: 'project-card', 'article-card',
